# covscript-streams

./: .gitignore  CMakeLists.txt  LICENSE  README.md  make.bat  make.sh  stream.hpp  streams-ext.cpp  streams.cpp  thunk.hpp
tests/: test-lazy.csc  test-stream-cpp.cpp  test.csc
